modified huddle landing page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    `
+
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Huddle</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="img/favicon-32x32 (4).png"
+      type="image/x-icon"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <header id="body-header">
+      <section id="menu">
+        <img src="img/logo (1).svg" alt="Huddle logo" class="logo" />
+        <a href=""><button>Try it free</button></a>
+      </section>
+      <section class="second-class">
+        <div class="one main-section">
+          <h1>Build The Community Your Fans Will Love</h1>
+          <p>
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with your users as you
+            engage in genuine discussion
+          </p>
+          <button>Get Started For Free</button>
+        </div>
+        <div class="two main-section">
+          <img src="img/illustration-mockups (1).svg" alt="Hero Image" />
+        </div>
+      </section>
+    </header>
+
+    <main id="body-main">
+      <div class="main-content">
+        <div class="main-content1 body-main">
+          <h2>Grow Together</h2>
+          <p>
+            Generate meaniful dicussions with your audience and build a strong,
+            loyal community. Think of the insightful conversations you miss out
+            on with a feedback form
+          </p>
+        </div>
+        <div class="main-content2 body-main">
+          <img
+            src="img/illustration-grow-together (1).svg"
+            alt="Grow Together"
+          />
+        </div>
+      </div>
+      <div class="content1">
+        <div class="main-content">
+          <div class="main-content2 body-main">
+            <img
+              src="img/illustration-flowing-conversation (1).svg"
+              alt="Flowing Conversations"
+            />
+          </div>
+          <div class="main-content1 body-main">
+            <h2>Flowing Conversations</h2>
+            <p>
+              You wouldn't paginate a conversation in real life, so why do it
+              online? Our threads have just-in-time loading for a more natural
+              flow
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="content1">
+        <div class="main-content">
+          <div class="main-content1 body-main">
+            <h2>Your Users</h2>
+            <p>
+              It takes no time at all to integrate Huddle with your app's
+              authentication solution. This means, once signed in to your app,
+              your users can start chatting immediately
+            </p>
+          </div>
+          <div class="main-content2 body-main">
+            <img src="img/illustration-your-users.svg" alt="Your Users" />
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer id="footer">
+      <section id="ready">
+        <div class="ready">
+          <h2>Ready To Build Your Community</h2>
+          <a href=""><button>Get Started For Free</button></a>
+        </div>
+      </section>
+
+      <section class="foot">
+        <img src="img/logo-white.svg" alt="Huddle logo" class="logo" />
+        <div class="footer">
+          <div class="f1">
+            <div class="lorem">
+              <p><i class="fa-solid fa-location-dot"></i></p>
+              <p class="left">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repudiandae iure animi ullam alias aut voluptatem!
+              </p>
+            </div>
+            <div class="phone">
+              <p><i class="fa-solid fa-phone"></i></p>
+              <p class="left">+1-543-123-4567</p>
+            </div>
+            <div class="email">
+              <p><i class="fa-solid fa-envelope"></i></p>
+              <p class="left">example@huddle.com</p>
+            </div>
+          </div>
+
+          <div class="about-us">
+            <ul>
+              <li><a href="">About Us</a></li>
+              <li><a href="">What We Do</a></li>
+              <li><a href="">FAQ</a></li>
+            </ul>
+          </div>
+
+          <div class="blog">
+            <ul>
+              <li><a href="">Career</a></li>
+              <li><a href="">Blog</a></li>
+              <li><a href="">Contact Us</a></li>
+            </ul>
+          </div>
+
+          <div class="f4">
+            <ul class="socials">
+              <li>
+                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+              </li>
+              <li>
+                <a href=""><i class="fa-brands fa-instagram-square"></i></a>
+              </li>
+              <li>
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="copyright">
+          <small>&copy; Copyright 2018 Huddle. All rights reserved </small>
+        </div>
+      </section>
+    </footer>
+  </body>
 </html>
